--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "sophon_ui",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "zisu",
+    "email": "lazy1523@outlook.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,17 +13,52 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
+    "@radix-ui/react-aspect-ratio": "^1.0.2",
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-collapsible": "^1.0.2",
+    "@radix-ui/react-context-menu": "^2.1.3",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-hover-card": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-menubar": "^1.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.2",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.2",
+    "@radix-ui/react-radio-group": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-slider": "^1.1.1",
+    "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-switch": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.0.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "lucide-react": "^0.221.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "recharts": "^2.5.0",
+    "recoil": "^0.7.7",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
   }
 }
