feat: add global loading component and useAxios hook
1. Implemented a global loading component using Next.js and CSS modules. The component overlays on the page with a spinning animation during any async operation.
2. Created a custom useAxios hook for handling HTTP requests. It integrates with the loading component to trigger the loading state before the request and turn it off after the request is complete.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "lazy1523@outlook.com"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "RECOIL_DUPLICATE_ATOM_KEY_CHECKING_ENABLED=false next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -42,6 +42,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
