--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.385.0",
+    "@aws-sdk/client-sts": "^3.385.0",
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
@@ -40,15 +42,22 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-toggle": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tailwindcss/typography": "^0.5.9",
+    "@typechain/ethers-v5": "^11.0.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@web3-react/core": "6.1.9",
+    "@web3-react/injected-connector": "6.0.7",
+    "@web3-react/walletconnect-connector": "6.2.13",
+    "@web3-react/walletlink-connector": "6.2.13",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "dom-to-image": "^2.6.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lucide-react": "^0.221.0",
@@ -58,6 +67,7 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.1",
+    "react-markdown": "^8.0.7",
     "recharts": "^2.5.0",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.12.0",
@@ -65,5 +75,8 @@
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/dom-to-image": "^2.6.4"
   }
 }
